--- a/src/main/frontend/app/index.html
+++ b/src/main/frontend/app/index.html
@@ -10,7 +10,11 @@
     <!-- endinject -->
   </head>
   <body ng-app="reportingApp">
-    <a ui-sref="employees" ui-sref-active="active">About</a>
+    <ul class="nav">
+      <li class="nav-item">
+        <a ui-sref="employees" ui-sref-active="active">Employees</a>
+      </li>
+    </ul>
 
     <ui-view></ui-view>
 
