frontend partials module name change

--- a/src/main/frontend/app/index.html
+++ b/src/main/frontend/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Planets App</title>
+    <title>Reporting App</title>
 
     <!-- bower:css -->
     <!-- endinject -->
