--- a/src/main/frontend/app/employees-list/employees-list.template.html
+++ b/src/main/frontend/app/employees-list/employees-list.template.html
@@ -1,7 +1,9 @@
 <section class="container">
   <div class="row">
     <div class="col-12">
-      <button class="btn btn-primary float-right">Add Employee</button>
+      <button class="btn btn-primary float-right margin-top margin-bottom">
+        Add Employee
+      </button>
     </div>
   </div>
   <ng-form
