--- a/src/main/frontend/app/employees-list/employees-list.template.html
+++ b/src/main/frontend/app/employees-list/employees-list.template.html
@@ -62,6 +62,11 @@
       <th>Projects</th>
       <th>Actions</th>
     </thead>
+    <tbody ng-show="$data.length == 0">
+      <tr>
+        <td colspan="7">No data available.</td>
+      </tr>
+    </tbody>
     <tbody>
       <tr ng-repeat="employee in $data">
         <td class="text-center">
