--- a/src/main/frontend/app/index.html
+++ b/src/main/frontend/app/index.html
@@ -8,6 +8,25 @@
     <!-- endinject -->
     <!-- inject:css -->
     <!-- endinject -->
+
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.default.css"
+    />
   </head>
   <body ng-app="reportingApp">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
