--- a/src/main/frontend/app/nav/nav.html
+++ b/src/main/frontend/app/nav/nav.html
@@ -19,7 +19,7 @@
 					class="icon-bar"></span> <span class="icon-bar"></span> <span
 					class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" ui-sref="home">JWT</a>
+			<a class="navbar-brand" ui-sref="home">Hour Reporting System</a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
