--- a/src/main/frontend/app/index.html
+++ b/src/main/frontend/app/index.html
@@ -9,25 +9,14 @@
     <!-- inject:css -->
     <!-- endinject -->
 
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.css"
-    />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body ng-app="reportingApp">
 
   <!-- View for adding the navigation bar -->
   <div ui-view="nav"></div>
 
-
-
-  <div class="container" style="margin-top: 50px;">
+  <div class="container">
     <!-- Main view for showing all views -->
     <div ui-view="content"></div>
   </div>
@@ -36,5 +25,6 @@
     <!-- endinject -->
     <!-- inject:js -->
     <!-- endinject -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
