storing session in cookies

--- a/src/main/frontend/app/index.html
+++ b/src/main/frontend/app/index.html
@@ -25,6 +25,8 @@
     <!-- endinject -->
     <!-- inject:js -->
     <!-- endinject -->
+    <!--should be added to autowire but dunno how to do it and don't have time to inquire it-->
+    <script src="bower_components/angular-cookies\angular-cookies.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
