added supervisor role and added seeded username: admin, password: admin

--- a/src/main/frontend/app/register/register.html
+++ b/src/main/frontend/app/register/register.html
@@ -57,6 +57,7 @@
                                                                 multiple="multiple" class="form-control"
                                                                 ng-model="appUser.roles" id="role" name="role">
                         <option value="USER">User</option>
+                        <option value="SUPERVISOR">Supervisor</option>
                         <option value="ADMIN">Administrator</option>
                     </select>
                     </div>
