--- a/src/main/frontend/src/index.html
+++ b/src/main/frontend/src/index.html
@@ -37,15 +37,15 @@
     </div>
 
     <script type="text/ng-template" id="custom/pager">
-      <div class="container margin-top margin-bottom pager ng-cloak">
+      <div class="container pager ng-cloak">
           <div class="row">
-            <div class="col-sm text-center">
+            <div class="col-md-8  margin-top margin-bottom">
               <div class="btn-group">
                 <button
                   type="button"
                   ng-class="{'active':params.count() == 10}"
                   ng-click="params.count(10)"
-                  class="btn btn-secondary"
+                  class="btn btn-default"
                 >
                   10
                 </button>
@@ -53,7 +53,7 @@
                   type="button"
                   ng-class="{'active':params.count() == 25}"
                   ng-click="params.count(25)"
-                  class="btn btn-secondary"
+                  class="btn btn-default"
                 >
                   25
                 </button>
@@ -61,7 +61,7 @@
                   type="button"
                   ng-class="{'active':params.count() == 50}"
                   ng-click="params.count(50)"
-                  class="btn btn-secondary"
+                  class="btn btn-default"
                 >
                   50
                 </button>
@@ -69,23 +69,26 @@
                   type="button"
                   ng-class="{'active':params.count() == 100}"
                   ng-click="params.count(100)"
-                  class="btn btn-secondary"
+                  class="btn btn-default"
                 >
                   100
                 </button>
               </div>
             </div>
-            <div class="col-sm text-center">
-              <button
-              ng-repeat="page in pages"
-                ng-click="params.page(page.number)"
-                class="btn btn-secondary"
-                ng-class="{'disabled': !page.active, 'previous': page.type == 'prev', 'next': page.type == 'next'}"
-                ng-show="page.type == 'prev' || page.type == 'next'" ng-switch="page.type"
-              >
-                <span ng-switch-when="prev">&laquo; Previous</span>
-                <span ng-switch-when="next">Next &raquo;</span>
-              </button>
+            <div class="col-md-4 margin-top margin-bottom">
+              <div class="btn-group">
+                <button
+                  ng-repeat="page in pages"
+                  ng-click="params.page(page.number)"
+                  class="btn btn-default"
+                  ng-class="{'disabled': !page.active, 'previous': page.type == 'prev', 'next': page.type == 'next'}"
+                  ng-show="page.type == 'prev' || page.type == 'next'"
+                  ng-switch="page.type"
+                >
+                  <span ng-switch-when="prev">&laquo; Previous</span>
+                  <span ng-switch-when="next">Next &raquo;</span>
+                </button>
+              </div>
             </div>
           </div>
         </div>
