Projects, reports fullstack fixes. Should work. Tested - worked. Maybe some little flaws left.

--- a/src/main/frontend/src/index.html
+++ b/src/main/frontend/src/index.html
@@ -86,6 +86,7 @@
               <span ng-switch-when="next">Next &raquo;</span>
             </button>
           </div>
+        </div>
       </div>
     </script>
 
